--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
             </div>
 
-            <img src="images/pexels-kindel-media-7688160.jpg" alt="">
+            <img src="images/pexels-kindel-media-7688160.jpg" alt=""/>
         </div>
     
         <div class="flex-container">
