sticky footer revision 3

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src='main.js'></script>
 </head>
 <body>
+    <div class="main">
     <nav class="navbar">
         <div class="container">
             <div class="logo">Schooner Associates, LLC</div>
@@ -45,9 +46,13 @@
         </div>
             
     </header>
+</div>
     <div class="flex-container">
-        <div class="footer">Copyright © 2022 Schooner Associates, LLC </div>
-        <div class="footer">Powered by Schooner Associates, LLC</div>
+        <div class="container">
+            <div class="footer">Copyright © 2022 Schooner Associates, LLC </div>
+            <div class="footer">Powered by Schooner Associates, LLC</div>
+        </div>
     </div>
+    
     </body>
 </html>
